<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_metrics"
            android:icon="@drawable/ic_baseline_metrics_24"
            android:title="@string/metrics" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/account" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/payment" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_center_24"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_signout_24"
            android:title="@string/sign_out" />
    </group>
</menu>