<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@drawable/home_linear_layout_outline"
    tools:context=".GoodsPickupActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/produce_pickup_checklist"
        android:textAllCaps="false"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_regular"
        android:text="Details"
        android:textAllCaps="false"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/farmer_details"
        android:textColorHint="@color/tertiary_text"
        app:boxStrokeColor="@color/secondary"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/HintLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_field_farmer_details"
            android:enabled="false"
            android:fontFamily="@font/nunito_regular"
            android:minLines="4"
            android:text="John Doe \n+25471234567 \njohndoe@gmail.com"
            android:textColor="@color/secondary_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/goods_details"
        android:textColorHint="@color/tertiary_text"
        app:boxStrokeColor="@color/secondary"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/HintLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_field_goods_details"
            android:enabled="false"
            android:fontFamily="@font/nunito_regular"
            android:minLines="4"
            android:text="10 bags of potatoes \nMedium Sized bags"
            android:textColor="@color/secondary_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/driver_to_do_list"
        android:textColorHint="@color/tertiary_text"
        app:boxStrokeColor="@color/secondary"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/HintLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_field_todo"
            android:enabled="false"
            android:fontFamily="@font/nunito_regular"
            android:minLines="4"
            android:text="Stick tracking tags on bags \nSample Bags for defects"
            android:textColor="@color/secondary_text" />

    </com.google.android.material.textfield.TextInputLayout>


    <life.sabujak.roundedbutton.RoundedButton
        android:id="@+id/button_problem_submit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nunito_regular"
        android:foreground="@drawable/button_outline_brown"
        android:gravity="center"
        android:text="@string/log_pickup"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:buttonColor="@color/primary"
        app:buttonCornerRadius="7dp"
        app:fontFamily="@font/nunito_light"
        app:layout_constraintBottom_toTopOf="@+id/button_driver_report_problem"
        app:layout_constraintEnd_toEndOf="@+id/button_driver_report_problem"
        app:layout_constraintStart_toStartOf="@+id/button_driver_report_problem" />

    <life.sabujak.roundedbutton.RoundedButton
        android:id="@+id/button_driver_report_problem"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_outline_yellow"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:text="@string/report_problem"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:buttonColor="@color/primary_background"
        app:buttonCornerRadius="7dp"
        app:fontFamily="@font/nunito_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>